<resources>
    <string name="app_name">FavoritePath</string>
    <string name="img_amigo">Imagen de amigo</string>
    <string name="listado_amigos">Listado de Amigos</string>
    <string name="listado_colecciones">Listado de Colecciones</string>
    <string name="listado_solicitudes">Listado de solicitudes</string>
    <string name="AyudaText">Aqui va la ayuda</string>
    <string name="hintTitulo">Titulo</string>
    <string name="hintDescripcion">Descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="borrar">Eliminar</string>
    <string name="img_header">Foto de perfil</string>
    <string name="nombre">Nombre</string>
    <string name="action_settings">Settings</string>
    <string name="mandar_solicitud">Mandar Solicitud</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_coleccion">Colecciones</string>
    <string name="menu_amigo">Amigos</string>
    <string name="menu_solicitud">Solicitudes</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="listado_rutas">Listado de rutas</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidW8yNjk1MDkiLCJhIjoiY2xoM29iM2p1MGQwMDNsb2FsMmx5aHBhdiJ9.AZxeyYYVO5K0h_4Rwv8thg</string>
</resources>