<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_perfil"/>
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_ruta"
            android:title="@string/menu_coleccion"/>
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_amigos"
            android:title="@string/menu_amigo"/>
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/ic_solicitudes"
            android:title="@string/menu_solicitud"/>
        <item
            android:id="@+id/nav_item5"
            android:icon="@drawable/ic_ayuda"
            android:title="@string/menu_ayuda"/>
    </group>
</menu>